# day-trading-agent

./: .gitignore  pyproject.toml  secrets.example.yaml  매수 매도 기준 잡기.md  시황따라 매매하기.md  주도주 찾기.md  주식 하수 고수 기준.md  호가창 매매 전략.md
KRX_openapi/: 1Spec.md  Spec (1).md  Spec (10).md  Spec (11).md  Spec (12).md  Spec (13).md  Spec (14).md  Spec (15).md  Spec (16).md  Spec (17).md  Spec (18).md  Spec (19).md  Spec (2).md  Spec (20).md  Spec (21).md  Spec (22).md  Spec (23).md  Spec (24).md  Spec (25).md  Spec (26).md  Spec (27).md  Spec (28).md  Spec (29).md  Spec (3).md  Spec (4).md  Spec (5).md  Spec (6).md  Spec (7).md  Spec (8).md  Spec (9).md  Spec.md
jongga/: calendar.py  config.py  regime.py  run_backtest.py  secrets.py  selector.py  sizing.py
jongga/backtest/: engine.py  fill_model.py  metrics.py
jongga/data/: cache.py  krx_provider.py  provider.py  pykrx_supply.py
jongga/factors/: flow.py  value.py
jongga/forward/: cli.py  cost.py  report.py  screen.py  select.py  settle.py
jongga/gate/: report.py
manju/: config.py  models.py
manju.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
manju/collector/: recorder.py  runner.py  subscriber.py
manju/kis/: parse.py  rest.py  ws.py
manju/replay/: feed.py
mdfile/: 종목 선정.md  테마 분류하기.md
scripts/: kospi_robustness.py  krx_probe.py
tests/: fixtures.py  test_models.py  test_parse.py  test_recorder.py  test_replay.py  test_rest.py  test_subscriber.py  test_ws.py
tests/jongga/: test_cache.py  test_calendar.py  test_engine.py  test_fill_model.py  test_flow_value_factors.py  test_krx_provider.py  test_metrics.py  (+5 more)
(+10 files in other folders)
