[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# 패키지를 명시 선언 — 루트의 노트 폴더(mdfile 등)가 자동탐색을 깨뜨리지 않게
packages = ["manju", "manju.kis", "manju.collector", "manju.replay",
            "jongga", "jongga.data", "jongga.factors", "jongga.backtest", "jongga.gate",
            "jongga.forward"]

[project]
name = "manju"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "requests>=2.31",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "pykrx>=1.0.45",
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "openai>=1.40",
]

[project.scripts]
manju-collect = "manju.collector.runner:main"
manju-compact = "manju.collector.compact:main"
jongga-forward-eve = "jongga.forward.cli:eve"
jongga-forward-morn = "jongga.forward.cli:morn"
jongga-forward-report = "jongga.forward.cli:report_cmd"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
